# torrentinfo

./: CLAUDE.md  Cargo.toml  README.md  build.sh
src/: cli.rs  error.rs  errors.rs  lib.rs  main.rs  utils.rs
tests/: pop-os_24.04_amd64_nvidia_22.iso.torrent  torrent_tests.rs
