[package]
name = "torrentinfo"
version = "0.2.0"
authors = ["Daniel Müller <perlfuchsi@gmail.com>"]
description = "A torrent file parser"
license = "GPL-3.0+"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/fuchsi/torrentinfo"
keywords = ["torrent", "bencode"]
edition = "2021"

[dependencies]
chrono = "0.4.2"
clap = "2.31.2"
error-chain = "0.11.0"
lazy_static = "1.0.0"
number_prefix = "0.2.8"
serde = "1.0.45"
serde_bencode = "0.2.0"
serde_bytes = "0.10.4"
serde_derive = "1.0.45"
sha-1 = "0.7.0"
yansi = "0.4.0"

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
unwrap_used = "deny"
enum_glob_use = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
