[package]
name = "torrentinfo"
version = "0.2.0"
authors = ["Daniel Müller <perlfuchsi@gmail.com>", "Esgrove <esgrove@outlook.com"]
description = "A torrent file parser"
license = "GPL-3.0+"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/fuchsi/torrentinfo"
keywords = ["torrent", "bencode"]
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
colored = "3.0.0"
dunce = "1.0.5"
number_prefix = "0.4.0"
serde = "1.0.219"
serde_bencode = "0.2.4"
serde_bytes = "0.11.17"
serde_derive = "1.0.219"
sha-1 = "0.10.1"
thiserror = "2.0.12"
walkdir = "2.5.0"

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
unwrap_used = "deny"
enum_glob_use = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
